Changelog for mk-table-sync:

   * Added the GroupBy algorithm as default replacement for Stream.
   * Syncing could stop and leave rows to delete in the destination.
   * Generate command-line help from the POD.

2008-06-02: version 1.0.7

   * Added NO_AUTO_VALUE_ON_ZERO to @@SQL_MODE (bug #1919897).
   * Added --trim to compare pre-5.0 and 5.0+ VARCHAR values consistently.

2008-03-16: version 1.0.6

   * --chunksize was not being converted to rowcount (bug #1902341).
   * Added --setvars option (bug #1904689, bug #1911371).
   * Deprecated the --utf8 option in favor of the A part in DSNs.
   * Mixed-case identifiers caused case-sensitivity issues (bug #1910276).
   * Prefer SHOW PROCESSLIST when looking for slaves of a server.

2008-02-10: version 1.0.5

   * The Stream algorithm wasn't chosen when a table had no key.
   * Numeric strings beginning with 0 weren't quoted (bug #1883019).

2008-01-24: version 1.0.4

   * Made the --algorithm option case-insensitive (bug #1873152).
   * Fixed a quoting bug.
   * Made the UTF-8 options configurable.

2008-01-05: version 1.0.3

   * Added the --function command-line option.
   * Added support for the FNV_64 hash function (see mk-table-checksum).
   * Made suffixes for time options optional (bug #1858696).
   * InnoDB tables use --transaction unless it's explicitly specified.

2007-12-27: version 1.0.2

   * Syncing via replication did not use REPLACE on the master.
   * --transaction disabled waiting for a slave to catch up.
   * Allow one DSN without --replicate, as long as --synctomaster is given.
   * Added the Nibble sync algorithm.
   * MASTER_POS_WAIT() failed when the server was not a master (bug #1855480).
   * DBD::mysql died after 'commands out of sync' error (bug #1856046).

2007-12-16: version 1.0.1

   * Empty strings were not quoted (bug #1848431).
   * --tables and --ignoretables now accept names in the form db.tbl.

2007-12-07: version 1.0.0

   * Complete rewrite.