@@ -1,7 +1,9 @@
 Changelog for mk-table-sync:
 
+   * Added safety checks to prevent changing data on a slave server.
+   * Added --skipslavecheck to prevent safety checks on destination server.
    * Added the GroupBy algorithm as default replacement for Stream.
-   * Syncing could stop and leave rows to delete in the destination.
+   * Syncing could stop and leave a row to delete in the destination.
    * Generate command-line help from the POD.
 
 2008-06-02: version 1.0.7
